<resources>
    <string name="IBGAskQuestionHint">Ask us anything.</string>
    <string name="IBGPromptOptionsReportBug">Report a bug</string>
    <string name="IBGReportBugHint">Please be as detailed as possible. What did you expect and what happened instead?</string>
    <string name="IBGReproStepsDisclaimerBody">To help us fix the problem, your report will include a list of steps to reproduce the issue.</string>
    <string name="IBGReproStepsDisclaimerLink">Edit list</string>
    <string name="IBGReproStepsListEmptyStateLabel">All app screens have been deleted.</string>
    <string name="IBGReproStepsListHeader">The list of app screens you visited will only be used to help us reproduce the problem you’re reporting.</string>
    <string name="IBGReproStepsListItemName">Screen #</string>
    <string name="IBGReproStepsListTitle">Visited Screens</string>
    <string name="IBGSuggestImprovementHint">How can we improve your experience using this app?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="accept">Accept</string>
    <string name="accept_payments">Accept Payments</string>
    <string name="accept_speaker_invite">Accept speaking invitation</string>
    <string name="accept_wave">Talk</string>
    <string name="account">Account</string>
    <string name="action_all_confirm_message">This action is not reversible.</string>
    <string name="active_clubs">Active Clubs</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_a_bio">Add a bio</string>
    <string name="add_a_bio_and_profile_pic">✨ Add a bio and profile pic to properly introduce yourself.</string>
    <string name="add_a_bio_to_properly">✨ Add a bio to properly introduce yourself.</string>
    <string name="add_a_co_host_or_guest">Add a Co-host or Guest</string>
    <string name="add_a_note_below">Add a note below to the admins of %s for their consideration.</string>
    <string name="add_a_profile_picture_to_properly">✨ Add a profile picture to properly introduce yourself .</string>
    <string name="add_a_title">Add a title</string>
    <string name="add_a_title_button_label">+ Add a title</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="add_chat_member">Add a Chat Member</string>
    <string name="add_chat_member_search_hint">Search followers</string>
    <string name="add_club_rules">Add Club Rules</string>
    <string name="add_club_topics">Add Club Topics</string>
    <string name="add_details_here">Add details here</string>
    <string name="add_feature">Add your thoughts</string>
    <string name="add_instagram">Add Instagram</string>
    <string name="add_member">Add member</string>
    <string name="add_members">Add Members</string>
    <string name="add_more_interests">"Add more interests so we can begin
to personalize Clubhouse for you.
Interests are private to you."</string>
    <string name="add_photo">Add a profile photo!</string>
    <string name="add_to_cal">Add to Cal</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_twitter">Add Twitter</string>
    <string name="added">Added %s</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_country_invalid">Your country is invalid</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="admin">Admin</string>
    <string name="all_set">"You're all set 🙏"</string>
    <string name="allow_followers">Allow Followers</string>
    <string name="allowed_payment_amount_symbols">0123456789</string>
    <string name="allowed_phone_number_symbols">0123456789 -</string>
    <string name="already_invited">Already Invited</string>
    <string name="already_on_clubhouse">Already on Clubhouse</string>
    <string name="already_thanked" formatted="false">"You've thanked %s already for their $%d"</string>
    <string name="amount_dollars">$%d</string>
    <string name="amp_label_copied">Copied To Clipboard</string>
    <string name="amp_label_copy">Copy</string>
    <string name="amp_label_device_id">DEVICE ID</string>
    <string name="amp_label_not_avail">N/A</string>
    <string name="amp_label_user_id">USER ID</string>
    <string name="amp_label_user_info">User Information</string>
    <string name="cancel">Cancel</string>
    <string name="clubhouse_payments">Clubhouse Payments</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="create_clip_coming_soon_body">Clips capture the last 30s of the room and let anyone in the room share it.</string>
    <string name="create_clip_coming_soon_learn_more_link">Learn more about Clips</string>
    <string name="create_clip_coming_soon_title">Clips aren’t yet available on Android. Coming soon!</string>
    <string name="get_help">Get help</string>
    <string name="helpful_links">Helpful links</string>
    <string name="payment_account">Payment Account</string>
    <string name="payment_account_continue_setup">Continue Setup</string>
    <string name="payment_account_in_review">In Review</string>
    <string name="payment_account_sign_up">Sign up</string>
    <string name="payment_account_visit">Visit</string>
    <string name="payments">Payments</string>
    <string name="payments_add_email">Add Email</string>
    <string name="payments_hold_tight">Hold tight while Stripe, our payment partner, reviews your account application.</string>
    <string name="payments_not_set_up">Your payment account is not set up. Continue to fill in the missing information.</string>
    <string name="payments_registration_description">Give your audience and others easy access to send you money. To start, create an account with Stripe, our payment partner.</string>
    <string name="payments_verify_email">Before you sign up, we need your email address to contact you and send you payment receipts.</string>
    <string name="recent_payments">Recent Payments</string>
    <string name="recent_payments_view">View</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="reporting">Reporting</string>
    <string name="retry">Retry</string>
    <string name="thank_you_for_making_clubhouse_safe">Thank you for making Clubhouse a safe and inclusive community.</string>
    <string name="the_incident_has_been_reported">The incident has been reported</string>
    <string name="they_have_a_bad_photo_or_profile">They have a bad photo or profile</string>
    <string name="they_said_something_wrong">They said something wrong</string>
    <string name="why_are_you_reporting">Why are you reporting %s?</string>
</resources>