<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?android:windowBackground" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar style="@style/ClubhouseNavToolbar">
        <TextView android:id="@id/cancel" android:text="@string/cancel" style="@style/ClubhouseNavLeftTextStyle" />
        <TextView android:text="@string/report_an_issue" style="@style/ClubhouseNavTitle" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView android:id="@id/content_container" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/report_item_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="16.0dip" android:text="@string/reporting" android:textAllCaps="true" android:layout_marginHorizontal="16.0dip" style="@style/TextStyle.Bold.ReportCapsTitle" />
            <androidx.cardview.widget.CardView style="@style/Clubhouse.CardView">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip">
                    <com.clubhouse.android.shared.ui.AvatarView android:id="@id/avatar" android:layout_width="@dimen/avatar_size_profile_medium" android:layout_height="@dimen/avatar_size_profile_medium" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <TextView android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/common_touchable_padding" app:layout_constraintStart_toEndOf="@id/avatar" app:layout_constraintTop_toTopOf="@id/avatar" style="@style/TextStyle.Bold.ReportName" />
                    <TextView android:ellipsize="end" android:id="@id/username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:layout_marginStart="@dimen/common_touchable_padding" app:layout_constraintStart_toEndOf="@id/avatar" app:layout_constraintTop_toBottomOf="@id/name" style="@style/TextStyle.Bold.ReportUsername" />
                    <TextView android:id="@id/channel_role" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/common_touchable_padding" app:layout_constraintStart_toEndOf="@id/avatar" app:layout_constraintTop_toBottomOf="@id/username" style="@style/TextStyle.Bold.ReportUsername" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <TextView android:id="@id/why_report" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="16.0dip" android:text="@string/why_are_you_reporting" android:layout_marginHorizontal="16.0dip" style="@style/TextStyle.Bold.ReportTitle" />
            <androidx.cardview.widget.CardView android:background="?selectableItemBackground" android:layout_marginBottom="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:id="@id/report_channel" android:text="@string/they_said_something_wrong" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_right_arrow" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/DividerWithSpace" />
                    <TextView android:gravity="center_vertical" android:id="@id/report_profile" android:text="@string/they_have_a_bad_photo_or_profile" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_right_arrow" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView android:id="@id/helpful_links" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/helpful_links" android:layout_marginHorizontal="16.0dip" style="@style/TextStyle.Bold.ReportTitle" />
            <androidx.cardview.widget.CardView android:background="?selectableItemBackground" android:layout_marginBottom="@dimen/common_bottom_margin" style="@style/Clubhouse.CardView">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:id="@id/report_community_guidelines" android:text="@string/community_guidelines" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                    <View style="@style/DividerWithSpace" />
                    <TextView android:gravity="center_vertical" android:id="@id/report_get_help" android:text="@string/get_help" android:paddingEnd="18.0dip" app:drawableEndCompat="@drawable/ic_arrow_up_right" style="@style/Clubhouse.Settings.Item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>